<resources>
    <string name="app_name">NaResbob</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="naresbob">NaResbob</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="create_a_new_account_to_try_famous_recipes">Create a new account to try famous recipes</string>
    <string name="home">Home</string>
</resources>